update my description and about
update my description and about

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Helder Viana
 
 # Short bio or description (displayed in the header)
-description: Full Stack Developer and DBA # @ JP Sá Couto (JP-ik) for a while
+description: .net Developer and geek
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: /images/logo.png #https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
