--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,13 @@
 #
 # This file contains configuration flags to customize your site
 #
+# Ross Buggins
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Ross Buggins
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Integration Development Consultant
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
