--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Neil Chandarana
 
 # Short bio or description (displayed in the header)
-description: A home for poorly researched thoughts on big data systems. Treat this as the blog equivalent of r/RoastMe. Comment away.
+description: A home for poorly researched thoughts on big data systems.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: #https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
 
 #
 # Flags below are optional
