--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Neil Chandarana
 
 # Short bio or description (displayed in the header)
-description: A home for poorly researched ideas on data systems.
+description: A home for poorly researched ideas on data systems
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: #https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
